<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".trafficmonitor.TrafficMonitorSettingActivity">

    <RelativeLayout
        android:id="@+id/rl_flow_start_date"
        android:layout_width="match_parent"
        android:layout_height="42dp"
        android:background="?attr/selectableItemBackground"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerVertical="true"
            android:layout_marginLeft="28dp"
            android:gravity="center_vertical|left"
            android:text="@string/tra_flow_start_date"
            android:textColor="@color/textcolor_main_wyh_traf"
            android:textSize="16sp"
            android:maxWidth="200dp"/>

        <TextView
            android:id="@+id/tv_flow_date"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentRight="true"
            android:layout_centerVertical="true"
            android:layout_marginRight="38dp"
            android:gravity="center_vertical|right"
            android:ellipsize="marquee"
            android:maxWidth="80dp"
            android:textSize="12sp" />

        <ImageView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentRight="true"
            android:layout_centerVertical="true"
            android:layout_marginRight="20dp"
            android:background="@drawable/ic_right_detail_wyh" />

    </RelativeLayout>

    <RelativeLayout
        android:id="@+id/rl_flow_total"
        android:layout_width="match_parent"
        android:layout_height="42dp"
        android:background="?attr/selectableItemBackground"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/rl_flow_start_date">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerVertical="true"
            android:layout_marginLeft="28dp"
            android:gravity="center_vertical|left"
            android:text="@string/tra_flow_package_total"
            android:textColor="@color/textcolor_main_wyh_traf"
            android:textSize="16sp" />

        <TextView
            android:id="@+id/tv_flow_num_total"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentRight="true"
            android:layout_centerVertical="true"
            android:layout_marginRight="38dp"
            android:gravity="center_vertical|right"
            android:textSize="12sp" />

        <ImageView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentRight="true"
            android:layout_centerVertical="true"
            android:layout_marginRight="20dp"
            android:background="@drawable/ic_right_detail_wyh" />

    </RelativeLayout>

    <RelativeLayout
        android:id="@+id/rl_flow_used"
        android:layout_width="match_parent"
        android:layout_height="42dp"
        android:background="?attr/selectableItemBackground"
        app:layout_constraintTop_toBottomOf="@+id/rl_flow_total">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerVertical="true"
            android:layout_marginLeft="28dp"
            android:gravity="center_vertical|left"
            android:text="@string/tra_flow_used"
            android:textColor="@color/textcolor_main_wyh_traf"
            android:textSize="16sp" />

        <TextView
            android:id="@+id/tv_flow_num_used"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentRight="true"
            android:layout_centerVertical="true"
            android:layout_marginRight="38dp"
            android:gravity="center_vertical|right"
            android:textSize="12sp" />

        <ImageView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentRight="true"
            android:layout_centerVertical="true"
            android:layout_marginRight="20dp"
            android:background="@drawable/ic_right_detail_wyh" />

    </RelativeLayout>

    <RelativeLayout
        android:id="@+id/rl_flow_limit"
        android:layout_width="match_parent"
        android:layout_height="42dp"
        android:background="?attr/selectableItemBackground"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/rl_flow_used">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerVertical="true"
            android:layout_marginLeft="28dp"
            android:gravity="center_vertical|left"
            android:text="@string/tra_flow_daily_limit"
            android:textColor="@color/textcolor_main_wyh_traf"
            android:textSize="16sp" />

        <TextView
            android:id="@+id/tv_flow_num_limit"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentRight="true"
            android:layout_centerVertical="true"
            android:layout_marginRight="38dp"
            android:gravity="center_vertical|right"
            android:textSize="12sp" />

        <ImageView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentRight="true"
            android:layout_centerVertical="true"
            android:layout_marginRight="20dp"
            android:background="@drawable/ic_right_detail_wyh" />

    </RelativeLayout>

    <RelativeLayout
        android:id="@+id/rl_flow_alert_value"
        android:layout_width="match_parent"
        android:layout_height="42dp"
        android:background="?attr/selectableItemBackground"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/rl_flow_limit">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerVertical="true"
            android:layout_marginLeft="28dp"
            android:gravity="center_vertical|left"
            android:text="@string/tra_flow_month_alert_value"
            android:textColor="@color/textcolor_main_wyh_traf"
            android:textSize="16sp" />

        <TextView
            android:id="@+id/tv_flow_num_alert"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentRight="true"
            android:layout_centerVertical="true"
            android:layout_marginRight="38dp"
            android:gravity="center_vertical|right"
            android:textSize="12sp" />

        <ImageView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentRight="true"
            android:layout_centerVertical="true"
            android:layout_marginRight="20dp"
            android:background="@drawable/ic_right_detail_wyh" />

    </RelativeLayout>

    <RelativeLayout
        android:id="@+id/rl_flow_none"
        android:layout_width="match_parent"
        android:layout_height="42dp"
        android:background="?attr/selectableItemBackground"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/rl_flow_alert_value">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerVertical="true"
            android:layout_marginLeft="28dp"
            android:gravity="center_vertical|left"
            android:text="@string/tra_flow_none"
            android:textColor="@color/textcolor_main_wyh_traf"
            android:textSize="16sp"
            android:maxWidth="170dp"/>

        <TextView
            android:id="@+id/tv_flow_none"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentRight="true"
            android:layout_centerVertical="true"
            android:layout_marginRight="38dp"
            android:gravity="center_vertical|right"
            android:textSize="12sp"
            android:maxWidth="130dp" />

        <ImageView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentRight="true"
            android:layout_centerVertical="true"
            android:layout_marginRight="20dp"
            android:background="@drawable/ic_right_detail_wyh" />

    </RelativeLayout>

</androidx.constraintlayout.widget.ConstraintLayout>